--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,9 @@
 @import 'fonts';
 @import 'general';
+@import 'flex';
 @import 'grid';
+@import 'header';
 @import 'login';
+@import 'home';
+@import 'business-card';
+@import 'filter-bar';
