--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -59,6 +59,7 @@
     justify-content: space-between;
 
     a {
+      cursor: pointer;
       color: #73dee4;
       font-weight: 700;
       display: block;
