--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,5 +5,8 @@
 @import 'header';
 @import 'login';
 @import 'home';
-@import 'business-card';
+@import 'business';
+@import 'offers';
+@import 'points-of-sales';
 @import 'filter-bar';
+@import 'profile';
