--- a/src/assets/scss/_offers.scss
+++ b/src/assets/scss/_offers.scss
@@ -1,4 +1,4 @@
-.business-card {
+.offers-card {
   border: 1px solid #e3e3e3;
   border-radius: 5px;
   padding: 1em;
@@ -57,6 +57,53 @@
 
     &:hover {
       background: #53a7ac;
+    }
+  }
+}
+
+.offers-item {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+
+  &__image {
+    width: 100%;
+    
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  &__status {
+    width: 100%;
+    padding: 1em;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    &--label {
+      background: orange;
+      border-radius: 5px;
+      padding: 1em;
+    }
+  }
+
+  &__info {
+    width: 100%;
+    padding: 1em;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    &--name {
+      margin: 0 2em 0 0;
+    }
+
+    &--offer {
+      margin: 0 2em 0 0;
     }
   }
 }
