--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   padding: 1em;
-  background: #e3e3e3;
+  border-bottom: 1px solid $gray;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
@@ -27,14 +27,14 @@
       border: none;
       outline: none;
       border-radius: 5px;
-      background: #ebc95b;
-      color: #000000;
+      background: $orange-corp;
+      color: $black;
       padding: 0.5em 1em;
       margin: 0 0 0 1em;
       transition: all ease 0.3s;
 
       &:hover {
-        background: #bb992a;
+        background: $orange-corp-dark;
       }
     }
   }
