--- a/src/assets/scss/_filter-bar.scss
+++ b/src/assets/scss/_filter-bar.scss
@@ -4,22 +4,22 @@
   flex-flow: row wrap;
   align-items: center;
   padding: 1em;
-  border-bottom: 1px solid #e3e3e3;
+  border-bottom: 1px solid $gray;
 
   &__icon {
     svg {
       width: 40px;
-      fill: #000000;
+      fill: $black;
       margin: 0 1em 0 0;
     }
   }
 
   select {
-    border: 1px solid #e3e3e3;
+    border: 1px solid $gray;
     border-radius: 5px;
     padding: 1em;
     margin: 0 1em 0 0;
-    color: #000000;
+    color: $black;
     font-size: 1rem;
     font-family: 'Inter', sans-serif;
   }
